Restore IT test for server-legacy and fix many errors (#279)
* Restore IT tests in -P precommit profile
* FIX sudo apt update && sudo apt upgrade  # again, due to new
architecture
* FIX wine
* FIX jdk16+ IT test
* change port build-docker
* upper timeout
* restore logs test opendj-slf4j-adapter.jar
* Bump grizzly-framework.version 3.0.1